<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PasswordChange">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="500dp"
            android:layout_height="52dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:title="@string/credit_card_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/common_google_signin_btn_text_dark_default" />

        <TextView
            android:id="@+id/footer5"
            android:layout_width="744dp"
            android:layout_height="48dp"
            android:background="@color/original1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/curPass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/curPassword"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar5"
            tools:ignore="autofill" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/curPass"
            app:layout_constraintTop_toBottomOf="@+id/curPass"
            tools:ignore="autofill"/>

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/confirmPass"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/newPass"
            app:layout_constraintTop_toBottomOf="@+id/newPass"
            tools:ignore="autofill"/>

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="126dp"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:text="@string/confirmBtn"
            app:layout_constraintEnd_toEndOf="@+id/confirmPass"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="@+id/confirmPass"
            app:layout_constraintTop_toBottomOf="@+id/confirmPass" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>