<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_default"
        tools:context=".refer">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar7"
            android:layout_width="500dp"
            android:layout_height="52dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/common_google_signin_btn_text_dark_default" />

        <TextView
            android:id="@+id/footer7"
            android:layout_width="744dp"
            android:layout_height="48dp"
            android:background="@color/original1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="35dp"
            android:text="@string/refertitle1"
            android:textColor="@color/light_black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referImg" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/refertitle2"
            android:textColor="@color/light_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            app:layout_constraintStart_toStartOf="@+id/title1"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="300dp"
            android:layout_height="82dp"
            android:gravity="fill_horizontal|fill_vertical"
            android:lineSpacingExtra="6sp"
            android:text="@string/refertitle3"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            android:textStyle="italic"
            app:fontFamily="serif"
            app:layout_constraintStart_toStartOf="@+id/title2"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

        <TextView
            android:id="@+id/code"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal|fill_vertical"
            android:text="Code"
            android:textSize="24sp"
            app:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="@+id/title3"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="@+id/title3"
            app:layout_constraintTop_toBottomOf="@+id/title3" />

        <ImageView
            android:id="@+id/referImg"
            android:layout_width="241dp"
            android:layout_height="243dp"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="113dp"
            android:layout_marginRight="113dp"
            android:contentDescription="@string/referImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar7"
            app:srcCompat="@drawable/refericon" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>